# OgreCrowd

./: CMakeLists.txt  conanfile.txt
Samples/include/: BaseApplication.h
Samples/src/: OgreRecastApplication.cpp
include/: CrowdManager.h
src/: CrowdManager.cpp
